--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "num_game",
+  "homepage": "https://Mr-Strange-Pwn.github.io/guess-num",
   "version": "1.0.0",
   "description": "to get active blood doners in a location ",
   "main": "index.js",
@@ -14,6 +15,8 @@
   },
   "scripts": {
     "start": "webpack-dev-server --open  ",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "create": "webpack"
   },
   "author": "Pawan Tiwari",
@@ -21,6 +24,7 @@
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "bootstrap": "^4.4.1",
+    "gh-pages": "^2.2.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
