add build in .json

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "scripts": {
     "start": "webpack-dev-server --open  ",
-    "create": "webpack"
+    "create": "webpack",
+    "build": "webpack --mode production"
   },
   "author": "Pawan Tiwari",
   "license": "ISC",
